--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,9 @@ Layout/HashAlignment:
   EnforcedHashRocketStyle: table
   EnforcedColonStyle: table
 
+Layout/LineLength:
+  Max: 100
+
 # Good: foo_37
 # Bad: bar42
 # Exception: s3
