Enforce Seattle.rb style

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -40,3 +40,6 @@ Style/HashTransformKeys:
 
 Style/HashTransformValues:
   Enabled: true
+
+Style/MethodDefParentheses:
+  EnforcedStyle: require_no_parentheses
