--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,12 @@ Layout/HashAlignment:
 Layout/LineLength:
   Max: 125
 
+Lint/RaiseException:
+  Enabled: true
+
+Lint/StructNewOverride:
+  Enabled: true
+
 Metrics/BlockLength:
   Exclude:
     - spec/**/*
