--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,11 @@
+inherit_from: .rubocop_todo.yml
+
 require:
   - rubocop-performance
   - rubocop-rspec
+
+AllCops:
+  NewCops: enable
 
 Layout/FirstArrayElementIndentation:
   EnforcedStyle: consistent
