--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -7,10 +7,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Ruby 2.6
+      - name: Set up Ruby
         uses: actions/setup-ruby@v1
-        with:
-          ruby-version: '2.6.x'
 
       - name: Checkout
         uses: actions/checkout@master
