--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,14 +7,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout repo
+        uses: actions/checkout@v1
 
-      - name: Set up Ruby 2.6
+      - name: Set up Ruby
         uses: actions/setup-ruby@v1
-        with:
-          ruby-version: 2.6.x
 
-      - name: Build and test with Rake
+      - name: Build and test
         run: |
           gem install bundler
           bundle install --jobs 4 --retry 3
