Unify organization of workflows

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,17 +1,17 @@
-on: [push]
-
 name: Linter
+
+on: [push]
 
 jobs:
   run:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@master
+
       - name: Set up Ruby
         uses: actions/setup-ruby@v1
-
-      - name: Checkout
-        uses: actions/checkout@master
 
       - name: Install dependencies
         run: |
